# tin-star

./: .gitignore  CHANGELOG.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: config.rs  git.rs  lib.rs  main.rs  output.rs
cli/src/commands/: check.rs  check_state.rs  config_cmd.rs  issue.rs  mod.rs  scan_diff.rs  status.rs  sweep.rs  validate_commit.rs
cli/src/rules/: branch_divergence.rs  commit_message.rs  commit_to_main.rs  destructive_ops.rs  force_push.rs  mod.rs  no_verify.rs  secrets.rs  stale_branches.rs
cli/tests/: check_cmd_test.rs  config_test.rs  git_test.rs  issue_test.rs  rules_test.rs  secrets_test.rs  state_rules_test.rs  sweep_test.rs
docs/: enforcement-engine.html
hooks/: hooks.json  post-tool-use  pre-tool-use  run-hook.cmd  session-start  stop
skills/sweep/: SKILL.md
tests/: e2e_test.sh  hooks_test.sh
