[package]
name = "tinstar"
version = "0.1.0"
edition = "2021"
description = "Git law enforcement CLI for Claude Code"
license = "MIT"

[[bin]]
name = "tinstar"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
